jar replaced with gradle dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ buildscript {
 }
 
 allprojects {
+    repositories {
+        jcenter()
+    }
 
     tasks.withType(JavaCompile) {
         options.encoding = "UTF-8"
