--- a/ResideMenu/build.gradle
+++ b/ResideMenu/build.gradle
@@ -28,6 +28,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.nineoldandroids:library:2.4.0'
 }
 
 apply from: '../maven_push.gradle'
